// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 staging percentage 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "stagingPercentage": 1,
  "version": "1.1.0",
}
`;

exports[`1 staging percentage 2`] = `
Array [
  "checking-for-update",
]
`;

exports[`90 staging percentage 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "stagingPercentage": 90,
  "version": "1.1.0",
}
`;

exports[`90 staging percentage 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`DigitalOcean Spaces 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`DigitalOcean Spaces 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`cancel download with progress 1`] = `"Cancelled"`;

exports[`checkForUpdates several times 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`checkForUpdates several times 2`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`checkForUpdates several times 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`downgrade (disallowed, beta) 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": "",
  "tag": "v1.5.2-beta.3",
  "version": "1.5.2-beta.3",
}
`;

exports[`file url generic - manual download 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`file url generic - manual download 2`] = `
Array [
  "checking-for-update",
  "update-available",
]
`;

exports[`file url generic 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`file url generic 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`file url github 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "xrTrW8dzWYlPnu71Y4lpLIAuIurBZJvZmqEZyz1rzM3CbbE1Z+T+P5qYYZgwmhmXdYPOpvnmYKa0HGdgXggwtQ==",
      "url": "TestApp-Setup-1.1.0.exe",
    },
  ],
  "releaseName": "1.1.0",
  "releaseNotes": "",
  "tag": "v1.1.0",
  "version": "1.1.0",
}
`;

exports[`file url github 2`] = `
Object {
  "files": Array [
    Object {
      "sha512": "xrTrW8dzWYlPnu71Y4lpLIAuIurBZJvZmqEZyz1rzM3CbbE1Z+T+P5qYYZgwmhmXdYPOpvnmYKa0HGdgXggwtQ==",
      "url": "TestApp-Setup-1.1.0.exe",
    },
  ],
  "releaseName": "1.1.0",
  "releaseNotes": "",
  "tag": "v1.1.0",
  "version": "1.1.0",
}
`;

exports[`file url github 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`file url github pre-release and fullChangelog 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": Array [
    Object {
      "note": "",
      "version": "1.5.2-beta.3",
    },
    Object {
      "note": "<p>Test pre-release. qefr</p>",
      "version": "1.5.0",
    },
  ],
  "tag": "v1.5.2-beta.3",
  "version": "1.5.2-beta.3",
}
`;

exports[`file url github pre-release and fullChangelog 2`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": Array [
    Object {
      "note": "",
      "version": "1.5.2-beta.3",
    },
    Object {
      "note": "<p>Test pre-release. qefr</p>",
      "version": "1.5.0",
    },
  ],
  "tag": "v1.5.2-beta.3",
  "version": "1.5.2-beta.3",
}
`;

exports[`file url github pre-release and fullChangelog 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`file url github pre-release and fullChangelog 4`] = `
Object {
  "files": Array [
    Object {
      "sha512": "Dj51I0q8aPQ3ioaz9LMqGYujAYRbDNblAQbodDRXAMxmY6hsHqEl3F6SvhfJj5oPhcqdX1ldsgEvfMNXGUXBIw==",
      "url": "TestApp Setup 1.5.2-beta.3.exe",
    },
  ],
  "releaseName": "v1.5.2-beta.3",
  "releaseNotes": Array [
    Object {
      "note": "",
      "version": "1.5.2-beta.3",
    },
    Object {
      "note": "<p>Test pre-release. qefr</p>",
      "version": "1.5.0",
    },
  ],
  "tag": "v1.5.2-beta.3",
  "version": "1.5.2-beta.3",
}
`;

exports[`file url github private 1`] = `
Object {
  "current": Array [
    Object {
      "browser_download_url": "https://github.com/mmaietta/electron-builder-test/releases/download/v1.0.0/electron-quick-start-typescript-1.0.0-x64.exe",
      "content_type": "application/octet-stream",
      "created_at": "2021-08-29T16:51:22Z",
      "download_count": 0,
      "id": 43565281,
      "label": "",
      "name": "electron-quick-start-typescript-1.0.0-x64.exe",
      "node_id": "MDEyOlJlbGVhc2VBc3NldDQzNTY1Mjgx",
      "size": 63742398,
      "state": "uploaded",
      "updated_at": "2021-08-29T16:52:20Z",
      "uploader": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/5238867?v=4",
        "events_url": "https://api.github.com/users/mmaietta/events{/privacy}",
        "followers_url": "https://api.github.com/users/mmaietta/followers",
        "following_url": "https://api.github.com/users/mmaietta/following{/other_user}",
        "gists_url": "https://api.github.com/users/mmaietta/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mmaietta",
        "id": 5238867,
        "login": "mmaietta",
        "node_id": "MDQ6VXNlcjUyMzg4Njc=",
        "organizations_url": "https://api.github.com/users/mmaietta/orgs",
        "received_events_url": "https://api.github.com/users/mmaietta/received_events",
        "repos_url": "https://api.github.com/users/mmaietta/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mmaietta/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mmaietta/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mmaietta",
      },
      "url": "https://api.github.com/repos/mmaietta/electron-builder-test/releases/assets/43565281",
    },
    Object {
      "browser_download_url": "https://github.com/mmaietta/electron-builder-test/releases/download/v1.0.0/electron-quick-start-typescript-1.0.0-x64.exe.blockmap",
      "content_type": "application/octet-stream",
      "created_at": "2021-08-29T16:51:22Z",
      "download_count": 0,
      "id": 43565280,
      "label": "",
      "name": "electron-quick-start-typescript-1.0.0-x64.exe.blockmap",
      "node_id": "MDEyOlJlbGVhc2VBc3NldDQzNTY1Mjgw",
      "size": 67773,
      "state": "uploaded",
      "updated_at": "2021-08-29T16:51:23Z",
      "uploader": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/5238867?v=4",
        "events_url": "https://api.github.com/users/mmaietta/events{/privacy}",
        "followers_url": "https://api.github.com/users/mmaietta/followers",
        "following_url": "https://api.github.com/users/mmaietta/following{/other_user}",
        "gists_url": "https://api.github.com/users/mmaietta/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mmaietta",
        "id": 5238867,
        "login": "mmaietta",
        "node_id": "MDQ6VXNlcjUyMzg4Njc=",
        "organizations_url": "https://api.github.com/users/mmaietta/orgs",
        "received_events_url": "https://api.github.com/users/mmaietta/received_events",
        "repos_url": "https://api.github.com/users/mmaietta/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mmaietta/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mmaietta/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mmaietta",
      },
      "url": "https://api.github.com/repos/mmaietta/electron-builder-test/releases/assets/43565280",
    },
    Object {
      "browser_download_url": "https://github.com/mmaietta/electron-builder-test/releases/download/v1.0.0/latest.yml",
      "content_type": "text/yaml",
      "created_at": "2021-08-29T16:52:21Z",
      "download_count": 9,
      "id": 43565293,
      "label": "",
      "name": "latest.yml",
      "node_id": "MDEyOlJlbGVhc2VBc3NldDQzNTY1Mjkz",
      "size": 386,
      "state": "uploaded",
      "updated_at": "2021-08-29T16:52:21Z",
      "uploader": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/5238867?v=4",
        "events_url": "https://api.github.com/users/mmaietta/events{/privacy}",
        "followers_url": "https://api.github.com/users/mmaietta/followers",
        "following_url": "https://api.github.com/users/mmaietta/following{/other_user}",
        "gists_url": "https://api.github.com/users/mmaietta/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mmaietta",
        "id": 5238867,
        "login": "mmaietta",
        "node_id": "MDQ6VXNlcjUyMzg4Njc=",
        "organizations_url": "https://api.github.com/users/mmaietta/orgs",
        "received_events_url": "https://api.github.com/users/mmaietta/received_events",
        "repos_url": "https://api.github.com/users/mmaietta/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mmaietta/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mmaietta/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mmaietta",
      },
      "url": "https://api.github.com/repos/mmaietta/electron-builder-test/releases/assets/43565293",
    },
  ],
  "files": Array [
    Object {
      "sha512": "icmn4HG+dAZIr2x4GFQGfYm+vG1vWRY+IqkX6nzjCpWsAx4aLH9+6h3s1adPjgDgfNlXd7D7M2MOCxPabq+1mw==",
      "size": 63742398,
      "url": "electron-quick-start-typescript-1.0.0-x64.exe",
    },
  ],
  "next": Array [
    Object {
      "browser_download_url": "https://github.com/mmaietta/electron-builder-test/releases/download/v1.0.0/electron-quick-start-typescript-1.0.0-x64.exe",
      "content_type": "application/octet-stream",
      "created_at": "2021-08-29T16:51:22Z",
      "download_count": 0,
      "id": 43565281,
      "label": "",
      "name": "electron-quick-start-typescript-1.0.0-x64.exe",
      "node_id": "MDEyOlJlbGVhc2VBc3NldDQzNTY1Mjgx",
      "size": 63742398,
      "state": "uploaded",
      "updated_at": "2021-08-29T16:52:20Z",
      "uploader": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/5238867?v=4",
        "events_url": "https://api.github.com/users/mmaietta/events{/privacy}",
        "followers_url": "https://api.github.com/users/mmaietta/followers",
        "following_url": "https://api.github.com/users/mmaietta/following{/other_user}",
        "gists_url": "https://api.github.com/users/mmaietta/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mmaietta",
        "id": 5238867,
        "login": "mmaietta",
        "node_id": "MDQ6VXNlcjUyMzg4Njc=",
        "organizations_url": "https://api.github.com/users/mmaietta/orgs",
        "received_events_url": "https://api.github.com/users/mmaietta/received_events",
        "repos_url": "https://api.github.com/users/mmaietta/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mmaietta/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mmaietta/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mmaietta",
      },
      "url": "https://api.github.com/repos/mmaietta/electron-builder-test/releases/assets/43565281",
    },
    Object {
      "browser_download_url": "https://github.com/mmaietta/electron-builder-test/releases/download/v1.0.0/electron-quick-start-typescript-1.0.0-x64.exe.blockmap",
      "content_type": "application/octet-stream",
      "created_at": "2021-08-29T16:51:22Z",
      "download_count": 0,
      "id": 43565280,
      "label": "",
      "name": "electron-quick-start-typescript-1.0.0-x64.exe.blockmap",
      "node_id": "MDEyOlJlbGVhc2VBc3NldDQzNTY1Mjgw",
      "size": 67773,
      "state": "uploaded",
      "updated_at": "2021-08-29T16:51:23Z",
      "uploader": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/5238867?v=4",
        "events_url": "https://api.github.com/users/mmaietta/events{/privacy}",
        "followers_url": "https://api.github.com/users/mmaietta/followers",
        "following_url": "https://api.github.com/users/mmaietta/following{/other_user}",
        "gists_url": "https://api.github.com/users/mmaietta/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mmaietta",
        "id": 5238867,
        "login": "mmaietta",
        "node_id": "MDQ6VXNlcjUyMzg4Njc=",
        "organizations_url": "https://api.github.com/users/mmaietta/orgs",
        "received_events_url": "https://api.github.com/users/mmaietta/received_events",
        "repos_url": "https://api.github.com/users/mmaietta/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mmaietta/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mmaietta/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mmaietta",
      },
      "url": "https://api.github.com/repos/mmaietta/electron-builder-test/releases/assets/43565280",
    },
    Object {
      "browser_download_url": "https://github.com/mmaietta/electron-builder-test/releases/download/v1.0.0/latest.yml",
      "content_type": "text/yaml",
      "created_at": "2021-08-29T16:52:21Z",
      "download_count": 9,
      "id": 43565293,
      "label": "",
      "name": "latest.yml",
      "node_id": "MDEyOlJlbGVhc2VBc3NldDQzNTY1Mjkz",
      "size": 386,
      "state": "uploaded",
      "updated_at": "2021-08-29T16:52:21Z",
      "uploader": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/5238867?v=4",
        "events_url": "https://api.github.com/users/mmaietta/events{/privacy}",
        "followers_url": "https://api.github.com/users/mmaietta/followers",
        "following_url": "https://api.github.com/users/mmaietta/following{/other_user}",
        "gists_url": "https://api.github.com/users/mmaietta/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/mmaietta",
        "id": 5238867,
        "login": "mmaietta",
        "node_id": "MDQ6VXNlcjUyMzg4Njc=",
        "organizations_url": "https://api.github.com/users/mmaietta/orgs",
        "received_events_url": "https://api.github.com/users/mmaietta/received_events",
        "repos_url": "https://api.github.com/users/mmaietta/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/mmaietta/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/mmaietta/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/mmaietta",
      },
      "url": "https://api.github.com/repos/mmaietta/electron-builder-test/releases/assets/43565293",
    },
  ],
  "path": "electron-quick-start-typescript-1.0.0-x64.exe",
  "releaseDate": "2021-08-29T16:52:21.160Z",
  "sha512": "icmn4HG+dAZIr2x4GFQGfYm+vG1vWRY+IqkX6nzjCpWsAx4aLH9+6h3s1adPjgDgfNlXd7D7M2MOCxPabq+1mw==",
  "version": "1.0.0",
}
`;

exports[`file url github private 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`file url keygen 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "r0NdvVubzJWAN56nqjTdLkBWV/dq0HQOKz9A6QFplUozu3uSVXA2t731miy/S29mY4MD18iLxKD6GXnPfNNbNw==",
      "size": 59865147,
      "url": "electron-quick-start-typescript-1.0.0-x64.exe",
    },
  ],
  "path": "electron-quick-start-typescript-1.0.0-x64.exe",
  "releaseDate": "2021-08-19T04:34:01.089Z",
  "sha512": "r0NdvVubzJWAN56nqjTdLkBWV/dq0HQOKz9A6QFplUozu3uSVXA2t731miy/S29mY4MD18iLxKD6GXnPfNNbNw==",
  "version": "1.0.0",
}
`;

exports[`file url keygen 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;

exports[`invalid signature 1`] = `"ERR_UPDATER_INVALID_SIGNATURE"`;

exports[`invalid signature 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "error",
]
`;

exports[`sha512 mismatch error event 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "@sha512",
      "url": "TestApp Setup 1.1.0.exe",
    },
  ],
  "version": "1.1.0",
}
`;

exports[`sha512 mismatch error event 2`] = `"ERR_CHECKSUM_MISMATCH"`;

exports[`sha512 mismatch error event 3`] = `
Array [
  "checking-for-update",
  "update-available",
  "error",
]
`;

exports[`test error 1`] = `"ERR_INVALID_ARG_TYPE"`;

exports[`test error 2`] = `
Array [
  "checking-for-update",
  "error",
]
`;

exports[`valid signature 1`] = `
Object {
  "files": Array [
    Object {
      "sha512": "xrTrW8dzWYlPnu71Y4lpLIAuIurBZJvZmqEZyz1rzM3CbbE1Z+T+P5qYYZgwmhmXdYPOpvnmYKa0HGdgXggwtQ==",
      "url": "TestApp-Setup-1.1.0.exe",
    },
  ],
  "releaseName": "1.1.0",
  "releaseNotes": "",
  "tag": "v1.1.0",
  "version": "1.1.0",
}
`;

exports[`valid signature 2`] = `
Array [
  "checking-for-update",
  "update-available",
  "update-downloaded",
]
`;
